--- a/package.json
+++ b/package.json
@@ -27,19 +27,24 @@
     "@nestjs/graphql": "^7.10.3",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-socket.io": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^7.6.15",
     "apollo-server-express": "^2.22.2",
     "body-parser": "^1.19.0",
     "bull": "^3.22.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "graphql-tools": "^7.0.4",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
+    "socket.io": "^4.0.1",
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
@@ -50,6 +55,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
