--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "@nestjs/websockets": "^7.6.15",
     "apollo-server-express": "^2.22.2",
     "body-parser": "^1.19.0",
-    "bull": "^3.22.0",
+    "bull": "^3.22.6",
     "dotenv": "^8.2.0",
+    "export-to-csv": "^0.2.1",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
@@ -45,13 +46,14 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
     "socket.io": "^4.0.1",
+    "socketcluster-client": "^16.0.2",
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
-    "@types/bull": "^3.15.0",
+    "@types/bull": "^3.15.1",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
