--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/platform-socket.io": "^7.6.15",
-    "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
     "apollo-server-express": "^2.22.2",
     "body-parser": "^1.19.0",
@@ -46,8 +45,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
     "socket.io": "^4.0.1",
-    "socketcluster-client": "^16.0.2",
-    "typeorm": "^0.2.32"
+    "socketcluster-client": "^16.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
